create dataprocessing module

--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,8 @@ atlassian-ide-plugin.xml
 
 # Python # 
 *.py[cod] 
-*$py.class 
+*$py.class
+__pycache__/
 
 # Distribution / packaging 
 .Python build/ 
